build/validrdfa/tests/snapshots/test_cases__cases@rdfa1.1__html5__0023.html.snap
---
source: validrdfa/tests/test-cases.rs
expression: "utils::serialize_graph(output_graph, base.as_str(),)"
input_file: validrdfa/tests/rdfa.github.io/test-suite/test-cases/rdfa1.1/html5/0023.html
---
@base <file:///0023.html> .
@prefix dc11: <http://purl.org/dc/elements/1.1/> .
<> dc11:creator "Mark Birbeck" .
